# sample-stream-analyzer

./: .gitignore  Dockerfile  README.md  pyproject.toml
analyzer/: main.py
proto/stream/v1/: analyzer.proto  analyzer_pb2.py  analyzer_pb2.pyi  analyzer_pb2_grpc.py
samples/: context.json  geometry_config.json  user_config.json
tools/: stream_analyzer_client.py  validator.py
