[project]
authors = [
    {name = "Your Name", email = "you@example.com"},
]
requires-python = "<4.0,>=3.12"
dependencies = [
    "av==16.1.0",
    "click==8.3.1",
    "grpcio==1.76.0",
    "mypy-protobuf==5.0.0",
    "numpy==2.4.1",
    "pillow==12.1.0",
    "protobuf==6.33.4",
    "pydantic==2.12.5",
]
name = "aipf-sample-stream-analyzer"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false

[dependency-groups]
dev = [
    "grpcio-tools==1.76.0",
    "ruff==0.14.14",
]

[tool.ruff]
line-length = 110
exclude = ["*_pb2.py", "*_pb2_grpc.py", "*.pyi"]

[tool.ruff.lint]
extend-select = ["I"]

[[tool.mypy.overrides]]
module = "grpc"
ignore_missing_imports = true
